# stock_llm

./: .env.example  .gitignore  CLAUDE.md  README.md  RULE.md  RUNBOOK.md  SKILL.md  pyproject.toml
.streamlit/: config.toml
data/snapshot/: financials_quarterly.parquet  institutional_daily.parquet  llm_usage.parquet  monthly_revenue.parquet  news.parquet  stocks.parquet
scripts/: build_features.py  compute_indicators.py  daily_update.py  export_duckdb_to_parquet.py  fetch_financials.py  fetch_institutional.py  fetch_monthly_revenue.py  fetch_news.py  fetch_prices.py  fetch_stock_list.py  import_parquet_to_duckdb.py  rank_stocks.py  score_news.py  test_gemini.py
src/stock_llm/: config.py
src/stock_llm/app/: main.py
src/stock_llm/data/: finmind.py  mops.py  news_anue.py  news_google.py  prices.py  schema.py  store.py  twse.py  universe.py
src/stock_llm/features/: chip.py  fundamental.py  indicators.py  sentiment.py  snapshot.py  tags.py  technical.py
src/stock_llm/llm/: gemini.py  news_scorer.py  recommendation.py  usage.py
src/stock_llm/models/: scoring.py  scoring_v2.py
